기존 swagger 변환 및 server 관련 swagger추가가
